# msgpackaf

./: .gitignore  CHANGES.md  Makefile  README.md  dune-project  msgpackaf.opam
.github/workflows/: main.yml
benchmark/: bench.ml  dune
src/: dune  easy.ml  easy.mli  internal.ml  internal.mli
test/: dune  test.ml
