opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "Apache-2.0"
homepage: "https://github.com/hcarty/msgpackaf"
dev-repo: "git+https://github.com/hcarty/msgpackaf.git"
bug-reports: "https://github.com/hcarty/msgpackaf"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.08.0"}
  "alcotest" {with-test}
  "angstrom" {>= "0.14.0"}
  "bigstringaf" {>= "0.4.0"}
  "faraday" {>= "0.6.1"}
  "fmt" {with-test}
  "dune" {>= "1.6.0"}
  "qcheck" {>= "0.9.0" & with-test}
  "qcheck-alcotest" {>= "0.9.0" & with-test}
]
synopsis: "MessagePack using Angstrom and Faraday"
description: """
msgpack parsing and encoding, using Angstrom for parsing and Faraday for
serialization"""
